--- a/github/home.html
+++ b/github/home.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>new folder</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos dolorem, expedita, aperiam dolores consequuntur cupiditate porro quisquam animi tempore quos quas distinctio fugiat nemo maxime ex delectus ipsum repellendus labore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad expedita quibusdam a quo ducimus? Provident hic debitis maiores omnis facere quae molestiae quod soluta. Quas error praesentium dolorem doloribus suscipit!</p>
+    <h3>new work</h3>
 </body>
 </html>
