pull data commit

--- a/github/index.html
+++ b/github/index.html
@@ -9,5 +9,6 @@
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam odit nisi nihil, sint, fugit animi praesentium eligendi tenetur laboriosam quo consequuntur sed architecto explicabo quas pariatur, alias aut eos. Aliquam.</p>
     </div>
+    <p>new work thorugh pull</p>
 </body>
 </html>
