--- a/json/index.html
+++ b/json/index.html
@@ -7,7 +7,11 @@
     <title>Title</title>
 </head>
 <body>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<div class="container">
+    <div class="row">
+     
+    </div>
+</div>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
