--- a/advancejs/registeration.html
+++ b/advancejs/registeration.html
@@ -26,7 +26,7 @@
         </div>
         <div class="mb-3">
             <label for="" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password">
+            <input type="text" class="form-control" id="password">
             <div></div>
         </div>
         <div class="mb-3">
@@ -39,7 +39,7 @@
             <input type="tel" class="form-control" id="number">
             <div></div>
         </div>
-        <button type="submit" id="btn" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" id="register">Submit</button>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
