--- a/advancejs/panel.html
+++ b/advancejs/panel.html
@@ -13,21 +13,11 @@
 
 <body>
     <div class="container">
-        <h1 class="text-center text-info text-capitalize">Login</h1>
+        <h1 class="text-center text-info text-capitalize" id="uName"></h1>
+        <p class="text-center" id="e"></p>
+        <p class="text-center">welcome to your portal</p>
        
-        <div class="mb-3">
-            <label for="" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-            <div></div>
-        </div>
-        <div class="mb-3">
-            <label for="" class="form-label">Password</label>
-            <input type="text" class="form-control" id="password">
-            <div></div>
-        </div>
        
-        <button type="submit" class="btn btn-primary" id="logIn">Submit</button>
-
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
